--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,4 +9,8 @@ html
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
   body
+    - if notice.present?
+      p.notice.alert.alert-info = notice 
+    - elsif alert.present?
+      p.alert.alert-danger.mb-0 = alert
     = yield
