トップページの作成

--- a/app/views/homes/index.html.slim
+++ b/app/views/homes/index.html.slim
@@ -1,5 +1,2 @@
-h1 ようこそ
-div
-  = link_to "新規登録", new_user_registration_path
-  br
-  = link_to "ログイン", new_user_session_path
+h1.p-3 ようこそ
+h2.p-3 アカウントを作成してTwitterクローンを始めよう!
