--- a/app/views/homes/show.html.slim
+++ b/app/views/homes/show.html.slim
@@ -1,4 +1,71 @@
-div.d-flex.justify-content-start
-  h1.mx-2 = "#{current_user.user_name}さん"
-  = link_to 'ログアウト', destroy_user_session_path, data: { "turbo-method": :delete }
-button.py-2.mb-2.btn.btn-outline-secondary.rounded-3.mx-2 つぶやき
+div.bg-white style="position: sticky; top: 71px; margin-right: -12px; margin-left: -12px;"
+  div.mx-2
+    strong.fs-5 ホーム
+  div.d-flex.mt-3.pb-2.border-bottom
+    - if @osusume.present?
+      div.col-md-6
+        div.d-flex.justify-content-center
+          = link_to 'おすすめ', home_path(current_user.id, osusume: true), class:'nav-link text-black text-center border-bottom border-3 border-info fw-bold'
+      div.col-md-6
+        div.d-flex.justify-content-center
+          = link_to 'フォロー中', home_path(current_user.id), class:'nav-link text-black text-center'
+    - else
+      div.col-md-6
+        div.d-flex.justify-content-center
+          = link_to 'おすすめ', home_path(current_user.id, osusume: true), class:'nav-link text-black text-center'
+      div.col-md-6
+        div.d-flex.justify-content-center
+          = link_to 'フォロー中', home_path(current_user.id), class:'nav-link text-black text-center border-bottom border-3 border-info fw-bold'
+div.d-flex.mt-3.pb-2.border-bottom style="margin-right: -12px; margin-left: -12px;"
+  div.col-md-1
+    - if current_user.profile_image.attached?
+      = image_tag current_user.profile_image.variant(resize_to_fill: [42, 42]).processed, class:'rounded-circle mx-1'
+    - else
+      a href="#" class="d-flex align-items-center" 
+        img src="https://github.com/mdo.png" alt="" width="42" height="42" class="rounded-circle mx-1"
+  div.col-md-11
+    form
+      div.mb-2.me-2
+        textarea.w-100 type="text" placeholder="いまどうしてる？" maxlength="140" style="border: none;"
+      div.d-flex
+        div.col-md-6
+          a href="#"
+            svg.bi.pe-none.me-2[viewBox='0 0 30 30' width='30' height='30']
+              g
+                path d='M3 5.5C3 4.119 4.119 3 5.5 3h13C19.881 3 21 4.119 21 5.5v13c0 1.381-1.119 2.5-2.5 2.5h-13C4.119 21 3 19.881 3 18.5v-13zM5.5 5c-.276 0-.5.224-.5.5v9.086l3-3 3 3 5-5 3 3V5.5c0-.276-.224-.5-.5-.5h-13zM19 15.414l-3-3-5 5-3-3-3 3V18.5c0 .276.224.5.5.5h13c.276 0 .5-.224.5-.5v-3.086zM9.75 7C8.784 7 8 7.784 8 8.75s.784 1.75 1.75 1.75 1.75-.784 1.75-1.75S10.716 7 9.75 7z'
+        div.col-md-6.text-end
+          button.btn.btn-primary.btn-sm.me-2 type="submit" ツイートする
+
+- @users_tweets.each do |tweet|
+  div.d-flex.mt-3.pb-2.border-bottom style="margin-right: -12px; margin-left: -12px;"
+    div.col-md-1
+      = image_tag tweet.user.profile_image.variant(resize_to_fill: [42, 42]).processed, class:'rounded-circle mx-1'
+    div.col-md-11
+        div.d-flex
+          div.me-2 
+            strong = tweet.user.user_name
+          div.text-black-50
+            = tweet.created_at.strftime('%Y/%m/%d %H:%M:%S')
+        div.mb-2.me-2
+          = safe_join(tweet.content.split("\n"), tag(:br))
+          / textarea.w-100 type="text" placeholder="いまどうしてる？" maxlength="140" style="border: none;"
+        div.col-md-12.d-flex.me-2
+          div.col-md-4
+            a href="#"
+              svg.bi.pe-none.me-2[viewBox='0 0 25 25' width='20' height='20']
+                g
+                  path d='M1.751 10c0-4.42 3.584-8 8.005-8h4.366c4.49 0 8.129 3.64 8.129 8.13 0 2.96-1.607 5.68-4.196 7.11l-8.054 4.46v-3.69h-.067c-4.49.1-8.183-3.51-8.183-8.01zm8.005-6c-3.317 0-6.005 2.69-6.005 6 0 3.37 2.77 6.08 6.138 6.01l.351-.01h1.761v2.3l5.087-2.81c1.951-1.08 3.163-3.13 3.163-5.36 0-3.39-2.744-6.13-6.129-6.13H9.756z'
+          div.col-md-4
+            a href="#"
+              svg.bi.pe-none.me-2[viewBox='0 0 25 25' width='20' height='20']
+                g
+                  path d='M4.5 3.88l4.432 4.14-1.364 1.46L5.5 7.55V16c0 1.1.896 2 2 2H13v2H7.5c-2.209 0-4-1.79-4-4V7.55L1.432 9.48.068 8.02 4.5 3.88zM16.5 6H11V4h5.5c2.209 0 4 1.79 4 4v8.45l2.068-1.93 1.364 1.46-4.432 4.14-4.432-4.14 1.364-1.46 2.068 1.93V8c0-1.1-.896-2-2-2z'
+          div.col-md-4
+            a href="#"
+              svg.bi.pe-none.me-2[viewBox='0 0 25 25' width='20' height='20']
+                g
+                  path d='M16.697 5.5c-1.222-.06-2.679.51-3.89 2.16l-.805 1.09-.806-1.09C9.984 6.01 8.526 5.44 7.304 5.5c-1.243.07-2.349.78-2.91 1.91-.552 1.12-.633 2.78.479 4.82 1.074 1.97 3.257 4.27 7.129 6.61 3.87-2.34 6.052-4.64 7.126-6.61 1.111-2.04 1.03-3.7.477-4.82-.561-1.13-1.666-1.84-2.908-1.91zm4.187 7.69c-1.351 2.48-4.001 5.12-8.379 7.67l-.503.3-.504-.3c-4.379-2.55-7.029-5.19-8.382-7.67-1.36-2.5-1.41-4.86-.514-6.67.887-1.79 2.647-2.91 4.601-3.01 1.651-.09 3.368.56 4.798 2.01 1.429-1.45 3.146-2.1 4.796-2.01 1.954.1 3.714 1.22 4.601 3.01.896 1.81.846 4.17-.514 6.67z'
+div.d-flex.justify-content-center.mt-2
+  = paginate @users_tweets
+
+
