--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,8 +9,30 @@ html
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
   body
-    - if notice.present?
-      p.notice.alert.alert-info = notice
-    - elsif alert.present?
-      p.alert.alert-danger.mb-0 = alert
-    = yield
+    svg xmlns="http://www.w3.org/2000/svg" style="display: none;"
+      symbol id="twitter" viewBox="0 0 16 16"
+        path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"
+    header.p-3.text-bg-white.border-bottom.bg-white style="position: sticky; top: 0px"
+      div.container
+        div.d-flex.flex-wrap.align-items-center.justify-content-between
+          div.mb-md-0
+            svg.bi.me-2[width="40" height="32"]
+              use xlink:href="#twitter"
+            | Twitterクローン
+          div.text-end
+            - if user_signed_in?
+              = link_to 'ログアウト', destroy_user_session_path, data: { "turbo-method": :delete }, class: 'btn btn-outline-primary'
+            - else
+              = link_to "ログイン", new_user_session_path, class: 'btn btn-outline-primary me-2'
+              = link_to "新規登録", new_user_registration_path, class: 'btn btn-primary'
+
+    div.container
+      div.row
+        = render 'shared/sidebar'
+        
+        div class="col-md-#{controller_name.in?(%w[registrations sessions]) ? 12 : 8} border-end"
+          - if notice.present?
+            p.notice.alert.alert-info = notice
+          - elsif alert.present?
+            p.alert.alert-danger.mb-0 = alert
+          = yield
