--- a/app/views/shared/_sidebar.html.slim
+++ b/app/views/shared/_sidebar.html.slim
@@ -52,13 +52,8 @@
     div.mb-auto
       a.btn.btn-primary.w-100 投稿する
     div.dropdown
-      - if current_user.profile_image.attached?
-        = image_tag current_user.profile_image.variant(resize_to_fill: [42, 42]).processed, class:'rounded-circle me-3'
-        strong = current_user.user_name
-      - else
-        a href="#" class="d-flex align-items-center text-black text-decoration-none"
-          img src="https://github.com/mdo.png" alt="" width="42" height="42" class="rounded-circle me-3"
-          strong = current_user.user_name
+      = image_tag(current_user.profile_image_tag, class:'rounded-circle me-3', width: '42', height: '42')
+      strong = current_user.user_name
 - elsif !%w[registrations sessions].include?(controller_name)
   div.d-flex.flex-column.p-3.text-bg-white.border-end.col-md-3 style="height: 90vh;"
 
