プロフィール編集画面の作成

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -36,4 +36,10 @@ html
           - elsif alert.present?
             p.alert.alert-danger.mb-0 = alert
 
+          - if @error_messages.present?
+            div.alert.alert-danger.pb-0
+              ul
+                - @error_messages.each do |message|
+                  li = message
+
           = yield
