--- a/app/views/profiles/show.html.slim
+++ b/app/views/profiles/show.html.slim
@@ -26,12 +26,10 @@ div
           span.text-black-50
             = current_user.location
       - if current_user.website?
-        a.me-3 href='#'
-          svg.me-1[viewBox='0 0 24 24' width='20' height='20' style='fill: rgba(0, 0, 0 ,0.5)']
-            g
-              path d='M18.36 5.64c-1.95-1.96-5.11-1.96-7.07 0L9.88 7.05 8.46 5.64l1.42-1.42c2.73-2.73 7.16-2.73 9.9 0 2.73 2.74 2.73 7.17 0 9.9l-1.42 1.42-1.41-1.42 1.41-1.41c1.96-1.96 1.96-5.12 0-7.07zm-2.12 3.53l-7.07 7.07-1.41-1.41 7.07-7.07 1.41 1.41zm-12.02.71l1.42-1.42 1.41 1.42-1.41 1.41c-1.96 1.96-1.96 5.12 0 7.07 1.95 1.96 5.11 1.96 7.07 0l1.41-1.41 1.42 1.41-1.42 1.42c-2.73 2.73-7.16 2.73-9.9 0-2.73-2.74-2.73-7.17 0-9.9z'
-          |
-          = current_user.website
+        svg.me-1[viewBox='0 0 24 24' width='20' height='20' style='fill: rgba(0, 0, 0 ,0.5)']
+          g
+            path d='M18.36 5.64c-1.95-1.96-5.11-1.96-7.07 0L9.88 7.05 8.46 5.64l1.42-1.42c2.73-2.73 7.16-2.73 9.9 0 2.73 2.74 2.73 7.17 0 9.9l-1.42 1.42-1.41-1.42 1.41-1.41c1.96-1.96 1.96-5.12 0-7.07zm-2.12 3.53l-7.07 7.07-1.41-1.41 7.07-7.07 1.41 1.41zm-12.02.71l1.42-1.42 1.41 1.42-1.41 1.41c-1.96 1.96-1.96 5.12 0 7.07 1.95 1.96 5.11 1.96 7.07 0l1.41-1.41 1.42 1.41-1.42 1.42c-2.73 2.73-7.16 2.73-9.9 0-2.73-2.74-2.73-7.17 0-9.9z'
+        = link_to current_user.website, "https://#{current_user.website}", class:'me-3'
       - if current_user.birthdate.present?
         span.me-3
           svg.me-1[viewBox='0 0 24 24' width='20' height='20' style='fill: rgba(0, 0, 0 ,0.5)']
