メソッド名の修正

--- a/app/views/homes/_favorite.html.slim
+++ b/app/views/homes/_favorite.html.slim
@@ -1,4 +1,4 @@
-- if tweet.favorited_by(current_user)
+- if tweet.favorited_by?(current_user)
   = turbo_frame_tag tweet do
     div.d-flex
       div
