--- a/app/views/homes/_tweet.html.slim
+++ b/app/views/homes/_tweet.html.slim
@@ -1,3 +1,9 @@
+- unless tweet.retweets.size.zero?
+  div.mx-3.fw-bold style="font-size: 13px; margin-bottom: -12px; color: rgb(83, 100, 113)"
+    svg.pe-none.me-2[viewBox='0 0 25 25' width='16' height='16' style='fill: rgba(0, 0, 0 ,0.5)']
+      g
+        path d='M4.75 3.79l4.603 4.3-1.706 1.82L6 8.38v7.37c0 .97.784 1.75 1.75 1.75H13V20H7.75c-2.347 0-4.25-1.9-4.25-4.25V8.38L1.853 9.91.147 8.09l4.603-4.3zm11.5 2.71H11V4h5.25c2.347 0 4.25 1.9 4.25 4.25v7.37l1.647-1.53 1.706 1.82-4.603 4.3-4.603-4.3 1.706-1.82L18 15.62V8.25c0-.97-.784-1.75-1.75-1.75z'
+    span = "#{current_user.user_name.eql?(tweet.retweets_user_name) ? "あなた" : "#{tweet.retweets_user_name}さん"}がリツイートしました"
 div.d-flex.mt-3.pb-2.border-bottom style="margin-right: -12px; margin-left: -12px;"
   div.col-md-1
     = image_tag tweet.user.profile_image.variant(resize_to_fill: [42, 42]).processed, class:'rounded-circle mx-1'
@@ -26,16 +32,6 @@ div.d-flex.mt-3.pb-2.border-bottom style="margin-right: -12px; margin-left: -12p
                 span.text-black-50 style='font-size: 14px'
                   = tweet.comments.size
       div.col-md-4
-        a.nav-link href="#"
-          div.d-flex
-            div
-              svg.pe-none.me-2[viewBox='0 0 25 25' width='20' height='20' style='fill: rgba(0, 0, 0 ,0.5)']
-                g
-                  path d='M4.5 3.88l4.432 4.14-1.364 1.46L5.5 7.55V16c0 1.1.896 2 2 2H13v2H7.5c-2.209 0-4-1.79-4-4V7.55L1.432 9.48.068 8.02 4.5 3.88zM16.5 6H11V4h5.5c2.209 0 4 1.79 4 4v8.45l2.068-1.93 1.364 1.46-4.432 4.14-4.432-4.14 1.364-1.46 2.068 1.93V8c0-1.1-.896-2-2-2z'
-              |
-            div
-              - unless tweet.retweets.size.zero?
-                span.text-black-50 style='font-size: 14px'
-                  = tweet.retweets.size
+        = render partial: 'homes/retweet', locals: { tweet: tweet }
       div.col-md-4
         = render partial: 'homes/favorite', locals: { tweet: tweet }
