--- a/app/views/homes/_tweet.html.slim
+++ b/app/views/homes/_tweet.html.slim
@@ -3,7 +3,8 @@
     svg.pe-none.me-2[viewBox='0 0 25 25' width='16' height='16' style='fill: rgba(0, 0, 0 ,0.5)']
       g
         path d='M4.75 3.79l4.603 4.3-1.706 1.82L6 8.38v7.37c0 .97.784 1.75 1.75 1.75H13V20H7.75c-2.347 0-4.25-1.9-4.25-4.25V8.38L1.853 9.91.147 8.09l4.603-4.3zm11.5 2.71H11V4h5.25c2.347 0 4.25 1.9 4.25 4.25v7.37l1.647-1.53 1.706 1.82-4.603 4.3-4.603-4.3 1.706-1.82L18 15.62V8.25c0-.97-.784-1.75-1.75-1.75z'
-    span = "#{current_user.user_name.eql?(tweet.retweets_user_name) ? "あなた" : "#{tweet.retweets_user_name}さん"}がリツイートしました"
+    - unless @is_profile_view.present?
+      span = "#{current_user.user_name.eql?(tweet.retweets_user_name) ? "あなた" : "#{tweet.retweets_user_name}さん"}がリツイートしました"
 div.d-flex.mt-3.pb-2.border-bottom style="margin-right: -12px; margin-left: -12px;"
   div.col-md-1
     = image_tag tweet.user.profile_image.variant(resize_to_fill: [42, 42]).processed, class:'rounded-circle mx-1'
